# abstract_mp

./: .gitignore  README.md  mapreduce.py  pyproject.toml
csv_transform/: cli.py  exceptions.py  invoker.py  mapper.py  resource.py
examples/: example.csv  example.json
tests/: test_csv_transform.py
